--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
     <head>
         <link rel="stylesheet" href="index.css"/>
         <script src="index.js" defer></script>
-        <title>Document</title>
+        <title>Unit 2 Puppy Bowl</title>
     </head>
     <body>
         <main>
-            
+
         </main>
     </body>
 </html>
